Modify html message

--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
   </head>
   <body>
 
-  <H1>台灣空氣品質 Taiwan Air Quality</H1>
-  此App是一個讓您可以瀏覽衛星雲圖的App。<br>
-本App使用台灣行政院環境保護署的環境資源資料開放平臺之API，呈現其要表現之資料，讓使用者可以查看各個空氣品質程度的縣市，並可以隨時標記/刪除想觀察的縣市。
+  <H1>台灣空氣品質 Taiwan Air Quality</H1>  
+本App使用台灣行政院環境保護署的環境資源資料開放平臺之API，呈現其要表現之資料，讓使用者可以查看各個空氣品質程度的縣市，並可以隨時標記/刪除想觀察的縣市。<br>
 
 本App不收費。<br>
 
